--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha ./tests/**/*.test.js",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha ./tests/**/*.test.js --timeout 10000",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "author": "",
